# fng-api-wrapper

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  code-analysis.yml
examples/: fetch_last_ten_days.rs
src/: client.rs  errors.rs  lib.rs  wrapper.rs
tests/: int_tests.rs
