[package]
name = "fng_api_wrapper"
description = "Crypto Fear and Greed API wrapper"
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/gcomte/fng-api-wrapper"

[dependencies]
chrono = { version = "0.4.23", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1.0.91"
thiserror = "2.0.8"
ureq = "2.6.2"
