[package]
name = "fng_api_wrapper"
description = "Crypto Fear and Greed API wrapper"
version = "1.0.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/gcomte/fng-api-wrapper"

[dependencies]
chrono = { version = "0.4.44", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.149"
thiserror = "2.0.18"
ureq = "3.3.0"
